<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginBottom="16dp"
            android:background="#854D27"
            android:hint="@string/email"
            android:textColor="#2E1F27" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="16dp"
            android:background="#854D27"
            android:hint="@string/password"
            android:textColor="#2E1F27" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@id/login"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/manual"
            android:textAlignment="center"
            android:textColor="#2E1F27" />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#1EFFBC"
            android:text="@string/login"
            android:textAlignment="center"
            android:onClick="@string/login"
            android:textColor="#fff" />



    </RelativeLayout>
</LinearLayout>